src/org/api/core/1.3.15/core.clusteredredisqueue.md
---
title: "ClusteredRedisQueue class · @imqueue/core"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/1.3.15/) &gt; [ClusteredRedisQueue](/api/core/1.3.15/core.clusteredredisqueue/)

## ClusteredRedisQueue class

Class ClusteredRedisQueue Implements possibility to scale queues horizontally between several redis instances.

**Signature:**

```typescript
export declare class ClusteredRedisQueue implements IMessageQueue, EventEmitter 
```
**Implements:** [IMessageQueue](/api/core/1.3.15/core.imessagequeue/)<!-- -->, EventEmitter

## Constructors

<table><thead><tr><th>

Constructor


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(constructor)(name, options)](/api/core/1.3.15/core.clusteredredisqueue._constructor_/)


</td><td>


</td><td>

Class constructor



</td></tr>
</tbody></table>

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[logger](/api/core/1.3.15/core.clusteredredisqueue.logger/)


</td><td>


</td><td>

[ILogger](/api/core/1.3.15/core.ilogger/)


</td><td>

Logger instance associated with this queue instance

 {<!-- -->ILogger<!-- -->}


</td></tr>
<tr><td>

[name](/api/core/1.3.15/core.clusteredredisqueue.name/)


</td><td>


</td><td>

string


</td><td>


</td></tr>
</tbody></table>

## Methods

<table><thead><tr><th>

Method


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[addListener(args)](/api/core/1.3.15/core.clusteredredisqueue.addlistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[clear()](/api/core/1.3.15/core.clusteredredisqueue.clear/)


</td><td>


</td><td>

Clears queue data in queue host application. Supposed to be an async function.


</td></tr>
<tr><td>

[destroy()](/api/core/1.3.15/core.clusteredredisqueue.destroy/)


</td><td>


</td><td>

Safely destroys current queue, unregistered all set event listeners and connections. Supposed to be an async function.


</td></tr>
<tr><td>

[emit(args)](/api/core/1.3.15/core.clusteredredisqueue.emit/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[eventNames(args)](/api/core/1.3.15/core.clusteredredisqueue.eventnames/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[getMaxListeners()](/api/core/1.3.15/core.clusteredredisqueue.getmaxlisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[listenerCount(args)](/api/core/1.3.15/core.clusteredredisqueue.listenercount/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[listeners(args)](/api/core/1.3.15/core.clusteredredisqueue.listeners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[off(args)](/api/core/1.3.15/core.clusteredredisqueue.off/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[on(args)](/api/core/1.3.15/core.clusteredredisqueue.on/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[once(args)](/api/core/1.3.15/core.clusteredredisqueue.once/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[prependListener(args)](/api/core/1.3.15/core.clusteredredisqueue.prependlistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[prependOnceListener(args)](/api/core/1.3.15/core.clusteredredisqueue.prependoncelistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[rawListeners(args)](/api/core/1.3.15/core.clusteredredisqueue.rawlisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[removeAllListeners(args)](/api/core/1.3.15/core.clusteredredisqueue.removealllisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[removeListener(args)](/api/core/1.3.15/core.clusteredredisqueue.removelistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[send(toQueue, message, delay, errorHandler)](/api/core/1.3.15/core.clusteredredisqueue.send/)


</td><td>


</td><td>

Sends a message to given queue name with the given data. Supposed to be an async function.


</td></tr>
<tr><td>

[setMaxListeners(args)](/api/core/1.3.15/core.clusteredredisqueue.setmaxlisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[start()](/api/core/1.3.15/core.clusteredredisqueue.start/)


</td><td>


</td><td>

Starts the messaging queue. Supposed to be an async function.


</td></tr>
<tr><td>

[stop()](/api/core/1.3.15/core.clusteredredisqueue.stop/)


</td><td>


</td><td>

Stops the queue (should stop handle queue messages). Supposed to be an async function.


</td></tr>
</tbody></table>

