src/org/api/core/2.0.2/core.clusteredredisqueue.md
---
title: "ClusteredRedisQueue class · @imqueue/core"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/2.0.2/) &gt; [ClusteredRedisQueue](/api/core/2.0.2/core.clusteredredisqueue/)

## ClusteredRedisQueue class

Class ClusteredRedisQueue Implements the possibility to scale queues horizontally between several redis instances.

**Signature:**

```typescript
export declare class ClusteredRedisQueue implements IMessageQueue, EventEmitter<EventMap> 
```
**Implements:** [IMessageQueue](/api/core/2.0.2/core.imessagequeue/)<!-- -->, EventEmitter&lt;[EventMap](/api/core/2.0.2/core.eventmap/)<!-- -->&gt;

## Constructors

<table><thead><tr><th>

Constructor


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(constructor)(name, options, mode)](/api/core/2.0.2/core.clusteredredisqueue._constructor_/)


</td><td>


</td><td>

Class constructor



</td></tr>
</tbody></table>

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[logger](/api/core/2.0.2/core.clusteredredisqueue.logger/)


</td><td>


</td><td>

[ILogger](/api/core/2.0.2/core.ilogger/)


</td><td>

Logger instance associated with this queue instance

 {<!-- -->ILogger<!-- -->}


</td></tr>
<tr><td>

[name](/api/core/2.0.2/core.clusteredredisqueue.name/)


</td><td>


</td><td>

string


</td><td>


</td></tr>
</tbody></table>

## Methods

<table><thead><tr><th>

Method


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[addListener(args)](/api/core/2.0.2/core.clusteredredisqueue.addlistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[addServer(server)](/api/core/2.0.2/core.clusteredredisqueue.addserver/)


</td><td>

`protected`


</td><td>

Adds new servers to the cluster


</td></tr>
<tr><td>

[clear()](/api/core/2.0.2/core.clusteredredisqueue.clear/)


</td><td>


</td><td>

Clears queue data in queue host application. Supposed to be an async function.


</td></tr>
<tr><td>

[destroy()](/api/core/2.0.2/core.clusteredredisqueue.destroy/)


</td><td>


</td><td>

Safely destroys current queue, unregistered all set event listeners and connections. Supposed to be an async function.


</td></tr>
<tr><td>

[emit(args)](/api/core/2.0.2/core.clusteredredisqueue.emit/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[eventNames(args)](/api/core/2.0.2/core.clusteredredisqueue.eventnames/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[getMaxListeners()](/api/core/2.0.2/core.clusteredredisqueue.getmaxlisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[listenerCount(args)](/api/core/2.0.2/core.clusteredredisqueue.listenercount/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[listeners(args)](/api/core/2.0.2/core.clusteredredisqueue.listeners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[off(args)](/api/core/2.0.2/core.clusteredredisqueue.off/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[on(args)](/api/core/2.0.2/core.clusteredredisqueue.on/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[once(args)](/api/core/2.0.2/core.clusteredredisqueue.once/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[prependListener(args)](/api/core/2.0.2/core.clusteredredisqueue.prependlistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[prependOnceListener(args)](/api/core/2.0.2/core.clusteredredisqueue.prependoncelistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[publish(data, toName)](/api/core/2.0.2/core.clusteredredisqueue.publish/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[rawListeners(args)](/api/core/2.0.2/core.clusteredredisqueue.rawlisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[removeAllListeners(args)](/api/core/2.0.2/core.clusteredredisqueue.removealllisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[removeListener(args)](/api/core/2.0.2/core.clusteredredisqueue.removelistener/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[removeServer(server)](/api/core/2.0.2/core.clusteredredisqueue.removeserver/)


</td><td>

`protected`


</td><td>

Removes server from the cluster


</td></tr>
<tr><td>

[send(toQueue, message, delay, errorHandler)](/api/core/2.0.2/core.clusteredredisqueue.send/)


</td><td>


</td><td>

Sends a message to given queue name with the given data. Supposed to be an async function.


</td></tr>
<tr><td>

[setMaxListeners(args)](/api/core/2.0.2/core.clusteredredisqueue.setmaxlisteners/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[start()](/api/core/2.0.2/core.clusteredredisqueue.start/)


</td><td>


</td><td>

Starts the messaging queue. Supposed to be an async function.


</td></tr>
<tr><td>

[stop()](/api/core/2.0.2/core.clusteredredisqueue.stop/)


</td><td>


</td><td>

Stops the queue (should stop handling queue messages). Supposed to be an async function.


</td></tr>
<tr><td>

[subscribe(channel, handler)](/api/core/2.0.2/core.clusteredredisqueue.subscribe/)


</td><td>


</td><td>


</td></tr>
<tr><td>

[unsubscribe()](/api/core/2.0.2/core.clusteredredisqueue.unsubscribe/)


</td><td>


</td><td>


</td></tr>
</tbody></table>

